--- a/style.css
+++ b/style.css
@@ -73,5 +73,17 @@ img {
 }
 
 @media screen and (max-width: 420px) {
+  .row {
+    width: 100%;
+    margin-top: 0px;
+  }
+
+  #lezioni .row>.left,
+  #lezioni .row>.right,
+  #steps .row>.left,
+  #steps .row>.central,
+  #steps .row>.right {
+    width: 100%;
+  }
   
 }
